Fix: Change the source of the image and created training and validation set

--- a/normal_classifier.ipynb
+++ b/normal_classifier.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Building the Classification model on just the image"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -16,104 +24,24 @@
     "import os\n",
     "import math\n",
     "import glob\n",
-    "import shutil"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Extracting Area of Intestest from the Xray Image"
+    "import shutil\n",
+    "import cv2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "About to cropping 625 Kidney_stone images\n",
-      "Kidney_stone images has been cropped\n",
-      "About to cropping 828 Normal images\n",
-      "Normal images has been cropped\n",
-      "Completed all images: 1453\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "\n",
-    "import matplotlib.pyplot as plt\n",
-    "import os\n",
-    "import cv2\n",
-    "\n",
-    "source_images_folder = os.path.join('.','Dataset',\"Train\") # the folder containing all the images for ROI selection\n",
-    "image_names = os.listdir(source_images_folder)\n",
+    "source_images_folder = os.path.join('.','Dataset',\"Train\") \n",
     "labels = os.listdir(os.path.join('.','Dataset',\"Train\"))\n",
-    "destination_folder = os.path.join('.','Dataset', \"cropped_images\") # the folder to which the cropped images are stored\n",
-    "#images_dir = []\n",
-    "total = 0\n",
-    "for label in labels:\n",
-    "    temp_dir = os.path.join(source_images_folder,label)\n",
-    "    temp_img = glob.glob(temp_dir + '/*.png')\n",
-    "    label_total = len(temp_img)\n",
-    "    print(\"About to cropping {} {} images\".format(label_total,label))\n",
-    "    for image_dir in temp_img:\n",
-    "        image_name = image_dir.split('\\\\')[-1]\n",
-    "        final_dest = os.path.join(destination_folder,label)\n",
-    "        if not os.path.exists(final_dest):\n",
-    "            os.mkdir(final_dest)\n",
-    "        image_final_dir = os.path.join(final_dest,image_name)\n",
-    "        reader = Image.open(image_dir).resize([640,640])\n",
-    "        reader = reader.crop((190, 120, 510, 280))\n",
-    "        reader.save(image_final_dir)\n",
-    "    print(\"{} images has been cropped\".format(label))\n",
-    "    total += label_total\n",
     "\n",
-    "print(\"Completed all images: {}\".format(total))\n",
+    "# Define the training and validation data directory\n",
+    "train_dir = os.path.join(source_images_folder, 'train')\n",
+    "val_dir = os.path.join(source_images_folder, 'val')\n",
     "\n",
-    " \n",
-    "\n",
-    "\n",
-    "    \n",
-    "\n",
-    "    #images_dir =  images_dir  + temp_img\n",
-    "    \n",
-    "\n",
-    "\n",
-    "\n",
-    "# reader = Image.open(images_dir[0]).resize([640,640])\n",
-    "# reader = reader.crop((190, 120, 510, 280))\n",
-    "\n",
-    "# reader.save()\n",
-    "#alx = plt.imshow(reader, cmap=\"gray\")\n",
-    "\n",
-    "# alx = plt.imshow(reader, cmap=\"gray\")\n",
-    "\n",
-    "\n",
-    "# for image in images_dir:\n",
-    "#     img = cv2.imread(image)\n",
-    "#     plt.figure(figsize=(5,5))\n",
-    "#     fig = plt.gcf()\n",
-    "#     plt.imshow(img[240:600,280:820])  # The ROI, please keep static\n",
-    "#     plt.draw()\n",
-    "#     if not os.path.exists(os.path.join(destination_folder)):\n",
-    "#       os.mkdir(os.path.join(destination_folder))\n",
-    "    \n",
-    "#     plt.savefig(os.path.join(destination_folder,'holla.png'))\n",
-    "#     print('saved ', image)\n",
-    "#     break"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Rebuilding the Classification model using the Area of interest images"
+    " "
    ]
   },
   {
@@ -121,11 +49,7 @@
    "execution_count": 21,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Define the training and validation data directory\n",
-    "train_dir = os.path.join(destination_folder, 'train')\n",
-    "val_dir = os.path.join(destination_folder, 'val')"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -153,12 +77,12 @@
     "  for t in train:\n",
     "    if not os.path.exists(os.path.join(train_dir, label)):\n",
     "      os.makedirs(os.path.join(train_dir, label))\n",
-    "    shutil.move(t, os.path.join(train_dir, label))\n",
+    "    shutil.copy(t, os.path.join(train_dir, label))\n",
     "\n",
     "  for v in val:\n",
     "    if not os.path.exists(os.path.join(val_dir, label)):\n",
     "      os.makedirs(os.path.join(val_dir, label))\n",
-    "    shutil.move(v, os.path.join(val_dir, label))"
+    "    shutil.copy(v, os.path.join(val_dir, label))"
    ]
   },
   {
@@ -477,7 +401,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9 (tags/v3.10.9:1dd9be6, Dec  6 2022, 20:01:21) [MSC v.1934 64 bit (AMD64)]"
+   "version": "3.10.9"
   },
   "orig_nbformat": 4,
   "vscode": {
