Save cropped model

--- a/Employing_croppimg.ipynb
+++ b/Employing_croppimg.ipynb
@@ -560,6 +560,25 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Save Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tf.keras.models.save_model(\n",
+    "    model,os.path.join(destination_folder,'cropped_modelv1.h5')\n",
+    ")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
